--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-lazyload": "^3.2.1",
     "react-resizable-panels": "^2.1.7",
     "react-rnd": "^10.5.2",
     "recharts": "2.15.0",
