--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.54.1",
+    "react-intersection-observer": "^9.16.0",
     "react-lazyload": "^3.2.1",
     "react-resizable-panels": "^2.1.7",
     "react-rnd": "^10.5.2",
@@ -73,6 +74,6 @@
     "@types/react-dom": "^18.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5" 
+    "typescript": "^5"
   }
 }
